# frankly-store-backend

./: README.md  pyproject.toml
app/: main.py
