[tool.poetry]
name = "frankly-store-backend"
version = "0.1.0"
description = ""
authors = ["Frank <frank.phuongnguyen@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"

[tool.poetry.dev-dependencies]
yes = "^0.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
